--- a/index.html
+++ b/index.html
@@ -14,8 +14,35 @@
 
 <body>
   <header>
-    
+    <nav>
+      <div class="nav-wrapper teal lighten-2">
+        <a href="#!" class="brand-logo center">The weather</a>
+      </div>
+    </nav>
   </header>
+  <section>
+    <div class="center card-panel">
+      <a id="location" class="waves-effect waves-light btn"><i class="large material-icons left">cloud</i>Buscar mi ubicación</a>
+
+    </div>
+    <div class="row">
+      <div class="card col m8 l8 s10 offset-s1 offset-m2 offset-l2">
+        <div class="card-content">
+          <span id="zone" class="card-title activator grey-text text-darken-4"></span>
+          <div id="weather-today-container"></div>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+          <div id="weather-week-container" class="">
+
+          </div>
+        </div>
+
+    </div>
+  </div>
+  </section>
+
+
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
